fixed posiiton of music button and hamburger menu. On mobile these two items would drastically change positions based on the size of the viewport

--- a/src/index.scss
+++ b/src/index.scss
@@ -55,7 +55,16 @@ body {
         text-decoration : underline;
     }
 }
-
+.nav-buttons {
+    position : absolute;
+    display : flex;
+    align-items : center;
+    justify-content : center;
+    z-index : 2;
+    left : 20vw;
+    top : 20%;
+    margin-top : 10px;
+}
 .scroll-bar {
     padding : 10px 10px;
     overflow-y : scroll;
@@ -206,15 +215,11 @@ body {
     }
 }
 #img {
-    position : absolute;
     width : 30px;
     height : 30px;
     text-align : center;
-    left : 50%;
-    top : 5%;
-    transform : translateX(-50%);
-    z-index : 2;
-    margin : 0px;
+    margin : 0px 10px;
+    display : block;
     }
     #img:hover {
         cursor : pointer;
@@ -290,6 +295,17 @@ body {
   }
   
   @media screen and (max-width: 700px) {
+      .nav-buttons {
+    position : absolute;
+    display : flex;
+    align-items : center;
+    justify-content : center;
+    z-index : 2;
+    left : 5vw;
+    top : 8%;
+    transform : translateY(0%);
+    margin-top : 20px;
+      }
     .nav-container {
         display : none;
     }
@@ -301,11 +317,12 @@ body {
         margin-left : 10%;
         margin-right : auto;
         z-index : 2;
-        height : 25vh;
-        transform : translateY(-10%);
+        height : 50vh;
+        transform : translateY(0%);
         top : 25%;
         border : 1px solid green;
-        justify-content : center;
+        flex-direction : column;
+        justify-content: center;
         align-items : center;
         background-color : black;
         opacity : 0.9;
@@ -314,9 +331,8 @@ body {
             color : white;
             text-decoration : none; 
             list-style: none;
-            text-align : center;
             position : relative;
-            padding : 7px;
+            padding : 20px;
             font-family: 'Space Mono', monospace;
             .link {
                 color : white;
@@ -331,20 +347,16 @@ body {
     }
    
     .hamburger-container {
-    margin : 0px;
+    margin : 0px 10px;
     display : block;
-    width : 20px;
-    height : 20px;
-    position : absolute;
-    z-index : 2;
-    left : 80%;
-    top : 25%;
-    transform : translateY(-400%);
+    width : 30px;
+    height : 30px;
+    position : static;
     padding : 0px;
     .nav-ele {
         height : 2px;
         background-color : white;
-        margin : 4px 0px;
+        margin : 7px 0px;
     }
 }
 .hamburger-container:hover {
@@ -357,10 +369,8 @@ body {
     height : 80vh;
 }
 #img {
-    top : 11%;
-    left : 75%;
-    width : 25px;
-    height : 25px;
+    width : 30px;
+    height : 30px;
 }
 .scroll-bar {
     width : 90vw;
